<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.exjobb.nfc.Frontpage" >

    <ImageView
        android:id="@+id/company_name"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="centerCrop"
        android:src="@drawable/frontpage" />

    <Button
        android:id="@+id/aboutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="About NFC and Functions" />

    <Button
        android:id="@+id/writeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/company_name"
        android:layout_below="@+id/company_name"
        android:text="@string/writeButton" />

    <Button
        android:id="@+id/readButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/writeButton"
        android:layout_below="@+id/writeButton"
        android:text="@string/readButton" />

    <Button
        android:id="@+id/formatButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/readButton"
        android:layout_alignLeft="@+id/readButton"
        android:text="@string/formatButtonFrontpage" />

    <Button
        android:id="@+id/lockButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/formatButton"
        android:layout_below="@+id/formatButton"
        android:text="@string/lockButton" />

</RelativeLayout>
